tests/fsharp/typecheck/sigs/neg88.bsl

neg88.fs(18,18,18,20): typecheck error FS0001: Type constraint mismatch. The type 
    ''c -> 'd'    
is not compatible with type
    'Func<'a,'b>'    


neg88.fs(19,18,19,20): typecheck error FS0001: Type constraint mismatch. The type 
    ''c -> 'd'    
is not compatible with type
    'Expressions.Expression<Func<'a,'b>>'    


neg88.fs(21,10,21,12): typecheck error FS0001: Type constraint mismatch. The type 
    ''b ref'    
is not compatible with type
    'byref<'a>'    

